--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
     <div class="username">7441 Hq</div>
     <div class="bio">extortion ender</div>
 
-    <button class="glow-button" onclick="window.location.href='https://discord.gg/nmzeWCPwEq'"><i>2n9 Server</i></button>
-    <button class="glow-button" onclick="window.location.href='https://discord.com/user/1399976163539026020'"><i>Discord</i></button>
-    <button class="glow-button" onclick="window.location.href='https://t.me/endextortion'"><i>Hanakos Telegram</i></button>
-    <button class="glow-button" onclick="window.location.href='https://discord.com/user/1397821279788073071'"><i>Other Discord</i></button>
+    <button class="glow-button" onclick="window.location.href='https://discord.gg/AYBaHBgNEs'"><i>12am Server</i></button>
+    <button class="glow-button" onclick="window.location.href='https://discord.com/user/1371938969415057418'"><i>Discord</i></button>
+    <button class="glow-button" onclick="window.location.href='https://discord.gg/U8uArEEbRg'"><i>7411 Server</i></button>
+    <button class="glow-button" onclick="window.location.href='https://discord.gg/988'"><i>988 Server</i></button>
   </div>
 
   <!-- Music controls -->
