--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>7441Hq | Profile</title>
+  <title>@988Hq | Profile</title>
   <style>
     body {
       margin: 0;
