--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <body>
   <div class="profile">
     <img src="https://i.pinimg.com/736x/b7/6a/1e/b76a1e4f0c2c33d299f846963aea0a1f.jpg" alt="Avatar" class="avatar">
-    <div class="username">7441 Hq</div>
+    <div class="username">@988Hq</div>
     <div class="bio">extortion ender</div>
 
     <button class="glow-button" onclick="window.location.href='https://discord.gg/AYBaHBgNEs'"><i>12am Server</i></button>
