--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
       {title:'Wake me - Lil Peep', src:'music/song8.mp3'},
       {title:'Watch - Lil Peep', src:'music/song9.mp3'},
       {title:'Choose - Lil Peep', src:'music/song10.mp3'},
+      {title:'Choose - gangmonkey audio', src:'music/song10.mp3'},
     ];
 
     let currentIndex=0, isShuffle=false, isLoop=false;
