--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="bio">extortion ender</div>
 
     <button class="glow-button" onclick="window.location.href='https://discord.gg/AYBaHBgNEs'"><i>12am Server</i></button>
-    <button class="glow-button" onclick="window.location.href='https://discord.gg/kut'"><i>kut server for zox/i></button>
+    <button class="glow-button" onclick="window.location.href='https://discord.gg/kut'"><i>kut server for zox</i></button>
     <button class="glow-button" onclick="window.location.href='https://discord.gg/U8uArEEbRg'"><i>7411 Server</i></button>
     <button class="glow-button" onclick="window.location.href='https://discord.gg/988'"><i>988 Server</i></button>
   </div>
