--- a/index.html
+++ b/index.html
@@ -240,9 +240,8 @@
       {title:'Wake me - Lil Peep', src:'music/song8.mp3'},
       {title:'Watch - Lil Peep', src:'music/song9.mp3'},
       {title:'Choose - Lil Peep', src:'music/song10.mp3'},
-      {title:'areacodes - idk', src:'music/song12.mp3'},
+      {title:'areacodes - idk', src:'music/song12.mp3'}
       
-
     let currentIndex=0, isShuffle=false, isLoop=false;
     const music=document.getElementById('bg-music');
     const songTitle=document.getElementById('song-title');
