--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>@988Hq | Profile</title>
+  <title>Hanako.exe | Profile</title>
   <style>
     body {
       margin: 0;
@@ -13,7 +13,7 @@
       font-family: Arial, sans-serif;
       color: white;
 
-      background: url("https://files.catbox.moe/h618r4.gif") no-repeat center center fixed;
+      background: url("https://i.pinimg.com/originals/ba/14/ad/ba14ad669e5e53c7681ffeb1004b9b54.gif") no-repeat center center fixed;
       background-size: cover;
     }
 
@@ -153,14 +153,14 @@
 </head>
 <body>
   <div class="profile">
-    <img src="https://files.catbox.moe/qytdt7.jpg" alt="Avatar" class="avatar">
+    <img src="https://i.pinimg.com/736x/b7/6a/1e/b76a1e4f0c2c33d299f846963aea0a1f.jpg" alt="Avatar" class="avatar">
     <div class="username">@988Hq</div>
-    <div class="bio">extortion ender</div>
+    <div class="bio">fuck extortion com</div>
 
-    <button class="glow-button" onclick="window.location.href='https://discord.gg/AYBaHBgNEs'"><i>12am Server</i></button>
-    <button class="glow-button" onclick="window.location.href='https://discord.gg/kut'"><i>kut server for zox</i></button>
-    <button class="glow-button" onclick="window.location.href='https://discord.gg/U8uArEEbRg'"><i>7411 Server</i></button>
-    <button class="glow-button" onclick="window.location.href='https://discord.gg/988'"><i>988 Server</i></button>
+    <button class="glow-button" onclick="window.location.href='doxbin.com/users/extK'"><i>doxbin</i></button>
+    <button class="glow-button" onclick="window.location.href='discord.gg/kut'"><i>Discord /kut</i></button>
+    <button class="glow-button" onclick="window.location.href='https://discord.gg/bjtxdGmp9Z'"><i>7441</i></button>
+    <button class="glow-button" onclick="window.location.href='https://rarbin.com/user/edr'"><i>rarbin acc</i></button>
   </div>
 
   <!-- Music controls -->
@@ -240,7 +240,10 @@
       {title:'Wake me - Lil Peep', src:'music/song8.mp3'},
       {title:'Watch - Lil Peep', src:'music/song9.mp3'},
       {title:'Choose - Lil Peep', src:'music/song10.mp3'},
-      {title:'areacodes - idk', src:'music/song12.mp3'} 
+      {title:'areacode - area code', src:'music/song12.mp3'}, 
+    ];    
+  
+
     let currentIndex=0, isShuffle=false, isLoop=false;
     const music=document.getElementById('bg-music');
     const songTitle=document.getElementById('song-title');
