--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hanako.exe | Profile</title>
+  <title>extortionK | Profile</title>
   <style>
     body {
       margin: 0;
