--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       {title:'Leanin - Lil Peep', src:'music/song7.mp3'},
       {title:'Wake me - Lil Peep', src:'music/song8.mp3'},
       {title:'Watch - Lil Peep', src:'music/song9.mp3'},
-      {title:'Choose - Lil Peep', src:'music/song10.mp3'},
+      {title:'drugs and love - 405', src:'music/song10.mp3'},
       {title:'areacode - area code', src:'music/song12.mp3'}, 
     ];    
   
