--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </head>
 <body>
   <div class="profile">
-    <img src="https://i.pinimg.com/736x/b7/6a/1e/b76a1e4f0c2c33d299f846963aea0a1f.jpg" alt="Avatar" class="avatar">
+    <img src="https://files.catbox.moe/gw0hom.jpg" alt="Avatar" class="avatar">
     <div class="username">@988Hq</div>
     <div class="bio">fuck extortion com</div>
 
