--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="profile">
     <img src="https://files.catbox.moe/gw0hom.jpg" alt="Avatar" class="avatar">
     <div class="username">@988Hq</div>
-    <div class="bio">fuck extortion com</div>
+    <div class="bio">shes /compulsive to me </div>
 
     <button class="glow-button" onclick="window.location.href='doxbin.com/users/extK'"><i>doxbin</i></button>
     <button class="glow-button" onclick="window.location.href='discord.gg/kut'"><i>Discord /kut</i></button>
@@ -240,7 +240,8 @@
       {title:'Wake me - Lil Peep', src:'music/song8.mp3'},
       {title:'Watch - Lil Peep', src:'music/song9.mp3'},
       {title:'drugs and love - 405', src:'music/song13.mp3'},
-      {title:'areacode - area code', src:'music/song12.mp3'}, 
+      {title:'areacode - area code', src:'music/song12.mp3'},
+      {title:'macho - xannax', src:'music/song14.mp3'},
     ];    
   
 
